syntax = "proto3";

service AutoService {
  rpc ObtenerAuto (AutoRequest) returns (AutoResponse);
}

message AutoRequest {
  int32 autoId = 1;
}

message AutoResponse {
  int32 autoId = 1;
  string autoMarca = 2;
  string autoModelo = 3;
  string autoAnio = 4;
}

message Empty {}

message Response {
  string message = 1;
}
